vendor/structopt-0.3.21/tests/ui/subcommand_and_methods.stderr
error: methods in attributes are not allowed for subcommand
  --> $DIR/subcommand_and_methods.rs:17:17
   |
17 |     #[structopt(subcommand, long)]
   |                 ^^^^^^^^^^
